# aws-dataexchange-api-samples

./: .gitignore  README.md
providers/python/add-amazon-redshift-dataset/: README.md  add-amazon-redshift-dataset.py
providers/python/add-amazon-s3-data-access/: README.md  add-amazon-s3-access.py  requirements.txt
providers/python/revoke-revisions-from-published-dataset/: README.md  requirements.txt  revision_pruning.py
providers/ruby/add-data-set/: Gemfile  README.md  add-data-set.rb
providers/ruby/add-revision-to-a-data-set/: Gemfile  README.md  add-revision-to-a-data-set.rb
providers/ruby/create-data-set-with-finalized-revision/: README.md  create-data-set-with-finalized-revision.rb
providers/ruby/enumerate-data-products/: Gemfile  README.md  enumerate-data-products.rb
providers/usage-metrics/: README.md
providers/usage-metrics/source/: adx_metrics_infrastructure.yaml  adx_metrics_processing.py
subscribers/cpp/all-entitled-datasets/: CMakeLists.txt  README.md  main.cpp
subscribers/dotnet/: .gitignore
subscribers/dotnet/all-entitled-datasets/: AwsDataExchangeSample.csproj  Program.cs  README.md
subscribers/go/adx-for-apis-simple/: README.md  go.mod  go.sum  main.go
subscribers/go/all-entitled-datasets/: README.md  all-entitled-datasets.go
subscribers/java/: .gitignore
subscribers/java/all-entitled-datasets/: README.md  pom.xml
subscribers/javascript/adx-for-apis-simple/: .gitignore  README.md  adx4api.js  adx4api.ts  package-lock.json  package.json
subscribers/python/: README.md  download-entitled-assets.py
(+42 files in other folders)
